messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-blue
  labels:
    app: django-messaging-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: blue
    spec:
      containers:
        - name: django-app
          image: messaging-app:v2.0
          ports:
            - containerPort: 8000
          command: ["python3", "manage.py"]
          args: ["runserver", "0.0.0.0:8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: django-messaging-app
